<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    
    <ScrollView
        android:id="@+id/scrollView"
        android:background="#cccccccc"
        android:layout_marginTop="34dp"
        android:layout_centerHorizontal="true"
        android:layout_width="320dp"
        android:layout_height="400dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/canine_text"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioGroupCanine">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioCanineNo"
                    android:text="@string/no_text"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioCanineYes"
                    android:text="@string/yes_text"/>
            </RadioGroup>

            <TextView
                android:padding="10dp"
                android:text="@string/scale_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <SeekBar
                android:id="@+id/seekBarFeline"
                android:max="10"
                android:layout_gravity="center_horizontal"
                android:layout_width="230dp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/seekBarProgresTextView"
                android:text="@string/defaultSeekBarText"
                android:paddingBottom="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:padding="10dp"
                android:text="@string/cutest_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/cutestDog"
                android:text="@string/dog_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <CheckBox
                android:id="@+id/cutestCat"
                android:text="@string/cat_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <CheckBox
                android:id="@+id/cutestParrot"
                android:text="@string/parrot_title"
                android:paddingBottom="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/drool_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioGroup
                android:id="@+id/radioGroupDrool"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioButtonDroolNo"
                    android:text="@string/no_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/radioButtonDroolYes"
                    android:text="@string/yes_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RadioGroup>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/showResults"
        android:text="@string/button_title"
        android:layout_below="@+id/scrollView"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>
